--- a/pages/services.html
+++ b/pages/services.html
@@ -1,37 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../main.css" />
+    <link rel="stylesheet" href="../services.css" />
     <title>Services Page</title>
-</head>
-<body>
-    <nav>
-        <a href="#">
-            <picture>
-                <!-- SVG version for all scenarios due to scalability and efficiency -->
-                <source srcset="../assets/logo/ECO_logo.svg" type="image/svg+xml" />
-                <!-- High resolution PNG for large screens -->
-                <source srcset="../assets/logo/ECO_logo_big.png" media="(min-width: 1024px)" type="image/png" />
-                <!-- Small PNG for medium screens -->
-                <source srcset="../assets/logo/ECO_logo_small.png" media="(min-width: 768px)" type="image/png" />
-                <!-- High resolution JPG for small screens (lower priority than PNG) -->
-                <source srcset="../assets/logo/ECO_logo_big.jpg" media="(min-width: 480px)" type="image/jpg" />
-                <!-- Fallback small JPG for all other scenarios or if none of the above are supported -->
-                <img src="../assets/logo/ECO_logo_small.jpg" alt="ECO company logo">
-            </picture>
-        </a>
-        <span class="spacer"></span>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="#" id="current-page">Services</a></li>
-            <li id="last-item"><a href="./contact.html">Contact</a></li>
-        </ul>
+  </head>
+  <body>
+    <nav arial-label="Menu navigation">
+      <a href="#">
+        <picture>
+          <!-- SVG version for all scenarios due to scalability and efficiency -->
+          <source srcset="../assets/logo/ECO_logo.svg" type="image/svg+xml" />
+          <!-- High resolution PNG for large screens -->
+          <source
+            srcset="../assets/logo/ECO_logo_big.png"
+            media="(min-width: 1024px)"
+            type="image/png"
+          />
+          <!-- Small PNG for medium screens -->
+          <source
+            srcset="../assets/logo/ECO_logo_small.png"
+            media="(min-width: 768px)"
+            type="image/png"
+          />
+          <!-- High resolution JPG for small screens (lower priority than PNG) -->
+          <source
+            srcset="../assets/logo/ECO_logo_big.jpg"
+            media="(min-width: 480px)"
+            type="image/jpg"
+          />
+          <!-- Fallback small JPG for all other scenarios or if none of the above are supported -->
+          <img src="../assets/logo/ECO_logo_small.jpg" alt="ECO company logo" />
+        </picture>
+      </a>
+      <span class="spacer"></span>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="#" id="current-page">Services</a></li>
+        <li id="last-item"><a href="./contact.html">Contact</a></li>
+      </ul>
     </nav>
-    <header>
-        <h1 style="text-align: center;">Services Page</h1>
+    <header id="services-header">
+      <h1 style="text-align: center">Services Page</h1>
     </header>
-</body>
+    <main id="services-main">
+      <aside id="services-aside">
+        <h2>Categories</h2>
+        <nav aria-label="Aside navigation">
+          <ul class="navigation-link">
+            <li><a href="#">Gardening</a></li>
+            <li><a href="#">Landscaping</a></li>
+            <li><a href="#">Weed Control</a></li>
+            <li><a href="#">Tree Removal</a></li>
+          </ul>
+        </nav>
+      </aside>
+    </main>
+    <footer id="services-footer">
+      <nav class="services-footer-nav" aria-label="Footer navigation">
+        <ul class="navigation-link">
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Cookies</a></li>
+        </ul>
+      </nav>
+      <hr />
+      <p>&copy; 2024 My Website</p>
+    </footer>
+  </body>
 </html>
