--- a/pages/services.html
+++ b/pages/services.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../main.css" />
-    <link rel="stylesheet" href="../services.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../styles/services.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
     <title>Services Page</title>
   </head>
   <body>
